Add BasePage.isDisplayed() helper and fix raw findElement() calls
- Add protected isDisplayed(By) to BasePage: catches NoSuchElementException
  and returns false instead of throwing, enabling safe visibility checks
- TablePage: replace direct driver.findElement() calls with isDisplayed(),
  waitForVisible(), and getText() where appropriate; swap Collectors.toList()
  for Stream.toList() (Java 16+)
- LoggedInPage: replace redundant waitForVisible().isDisplayed() with isDisplayed()

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>